Removing this stops a horrendous layout issue with Grid.

--- a/src/scss/theme-interior/_layout.scss
+++ b/src/scss/theme-interior/_layout.scss
@@ -54,7 +54,7 @@ body {
   display: grid;
 
   main {
-    min-height: 100%;
+    //min-height: 100%; // Causes horrendous bug in Chrome.
   }
 }
 
